FEAT: myPage-habbit achievement

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">New Tine Project</string>
+    <string name="title_activity_achievement">Achievement_Activity</string>
 </resources>
