--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">New Tine Project</string>
     <string name="title_activity_mytech">mytech_Activity</string>
+    <string name="title_activity_achievement">Achievement_Activity</string>
 </resources>
