feat: firebase alram test 성공

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">NEWTINE</string>
+    <string name="newtine_alarm_channel">NEWTINE_ALARM_CHANEL</string>
 </resources>
